# advent_of_code

./: README.md
2023/: README.md
2023/day1/: aoc1_test.go  main.go
2023/day1/num_list/: num_list.go
2023/day10/: main.go
2023/day10/list/: list.go
2023/day10/list/answer/: answer.go
2023/day11/: main.go  main_test.go
2023/day11/utilities/mat/: mat.go
2023/day12/: main.go  main_test.go  tex.txt
2023/day13/: go.mod  main.go  main_test.go
2023/day14/: go.mod  main.go  main_test.go  pod.go
2023/day15/: answer.py  go.mod  main.go  main_test.go
2023/day15/box_map/: box_map.go
2023/day16/: go.mod  main.go  main_test.go
2023/day16/contraption/: beam.go  tiles.go
2023/day16/queue/: queue.go
2023/day17/: go.mod  main.go  main_test.go
2023/day17/queue/: queue.go
2023/day18/: go.mod  inputTest2.txt  main.go  main_test.go
2023/day18/grid/: grid.go  list.go
2023/day19/: go.mod  main.go  main_test.go
2023/day2/: main.go  main_test.go
2023/day2/list/: list.go
2023/day20/: go.mod  main.go  main_test.go
2023/day20/connector/: connector.go
2023/day20/queue/: queue.go
2023/day21/: go.mod  main.go  main_test.go
2023/day21/queue/: queue.go
2023/day22/: main.go  main_test.go
2023/day22/queue/: queue.go
2023/day23/: main.go  main_test.go
2023/day23/queue/: queue.go
2023/day24/: go.mod  main.go  main_test.go  part2.py
2023/day25/: pyAnswer.py
2023/day3/: main.go
2023/day3/mat/: mat.go
2023/day4/: main.go  main_test.go
2023/day4/list/: list.go
2023/day5/: main.go
2023/day5/List/conv/: conv.go
2023/day5/List/seeds/: seeds.go
2023/day6/: main.go
2023/day6/list/: list.go
2023/day7/: go.mod  inputTest.txt  main.go  main_test.go
2023/day7/list/: list.go
2023/day7/queue/: queue.go
2023/day7/queueP2/: queue.go
2023/day8/: main.go  solution.py
2023/day8/tree/: tree.go
2023/day9/: main.go
2023/day9/list/: list.go
2024/: CMakeLists.txt
2024/days/: CMakeLists.txt  day1_runner.cpp  day2_runner.cpp  day3_runner.cpp  day4_runner.cpp  day5_runner.cpp  day6_runner.cpp  hello.cpp
2024/days/inputs/: day6.py  input_test.txt  res.py  res.sh  test2.txt  test_day2-3.txt  test_day3-2.txt
2024/include/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h
2024/lib/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp
2024/tests/: CMakeLists.txt  testDay1.cpp  testDay2.cpp  testDay3.cpp  testDay4.cpp  testDay5.cpp  testDay6.cpp  test_helloworld.cpp
